--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         
 
         <div class="footer">
-            Todos os direitos reservados 2023 - Roberto Brito de Oliveira
+            Todos os direitos reservados 2023 <br> Roberto Brito de Oliveira
         </div>
 
         <div class="sidebar-direita">
