--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
                 <br>
                 <p>Episódio</p>
                 <input id="input-episode"  type="number" min="0" max="2500">
+                <div class="btn">
+                    <button class="btn-cadastrar">CADASTRAR</button>
+                    <button class="btn-limpar">CANCELAR</button>
+                </div>
+                
+
+
             </div>
             
             <div class="form2"> EDITAR
@@ -77,6 +84,10 @@
                 <br>
                 <p>Episódio</p>
                 <input id="input-episode"  type="number" min="0" max="2500">
+                <div class="btn">
+                    <button class="btn-editar">EDITAR</button>
+                    <button class="btn-cancelar">CANCELAR</button>
+                </div>
             </div>
 
             <div class="form3"> PESQUISAR
@@ -88,6 +99,10 @@
                 <br>
                 <p>Episódio</p>
                 <input id="input-episode"  type="number" min="0" max="2500">
+                <div class="btn">
+                    <button class="btn-pesquisar">PESQUISAR</button>
+                    <button class="btn-cancel">CANCELAR</button>
+                </div>
             </div>
 
             <div class="form4"> RESULTADO</div>
